--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -330,9 +330,14 @@ Chemistry
 
 
   
+</div></div>
+    
+  </div><br><br>
 
-    </div>
-  </div>
+
+
+
+
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
@@ -523,6 +528,8 @@ Chemistry
   </fieldset>
 
 </div>
+
+      </div>
 
 
 
