--- a/app/views/prototypes/peter/many-vacancies.html
+++ b/app/views/prototypes/peter/many-vacancies.html
@@ -33,50 +33,22 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many vacancies did you have in the last academic year?
+        How many manager vacancies did you have in the last academic year?
       </h1>
     </legend><br><br>
     <div class="govuk-form-group">
-      <h2 class="govuk-heading-m">Managers</h2>
-      <label class="govuk-label" for="width-10">
-        Senior or middle manager, principal, vice-principal, CEO
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div><br>
-
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Teachers</h2>Anyone who teaches or trains as the main part of their job
-
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div><br>
-
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Teaching support</h2>Teaching assistant, mentor, assessor
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div><br>
-
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Administration</h2>Those who support the delivery of training but are not in the groups above. For example, HR or data officer.
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div>
       
+      <label class="govuk-label" for="width-10">
+        Senior or middle managers, principals, vice-principals, CEOs
+      </label>
+      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+    </div><br>
+
    
 </fieldset>
 </div>
 
-
-<br>
-
-
-
-
-          <a href="how-long" class="govuk-button show-continue" style="display: inline;">
+          <a href="many-vacancies-filled" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
