--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -39,7 +39,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which subjects were difficult to find teachers for?
+        How many teacher vacancies did you have for each subject?
       </h1>
     </legend><br>
 
