--- a/app/views/prototypes/peter/many-vacancies-filled.html
+++ b/app/views/prototypes/peter/many-vacancies-filled.html
@@ -33,44 +33,23 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many vacancies were you unable to fill?
+        How many manager vacancies were filled?
       </h1>
-    </legend><br><br>
+    </legend><br>
 
+    
     <div class="govuk-form-group">
-      <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Managers</h2>
-      </label>
+    
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div><br>
 
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Teachers</h2>
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div><br>
-
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Teaching support</h2>
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div>
-      <br>
-
-      <div class="govuk-form-group">
-        <label class="govuk-label" for="width-10">
-          <h2 class="govuk-heading-m">Administration</h2>
-        </label>
-        <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-      </div>
+   
 </fieldset>
-</div><BR>
+</div>
 
 
 
-          <a href="how-long" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
