--- a/app/views/prototypes/peter/vacancies-levels.html
+++ b/app/views/prototypes/peter/vacancies-levels.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                At what level were the subjects difficult to find teachers for?
+                What level were the vacancies for?
               </h1>
             </legend>
             <!--<div id="citizenship-conditional-hint" class="govuk-hint">
