--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -35,7 +35,7 @@
 
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
-            How many vacancies for teachers did you have for each subject?
+            How many teacher vacancies did you have by subject?
           </h1>
         </legend><br><br>
 
@@ -65,14 +65,141 @@
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
+
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Archaeology</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                     <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Astronomy</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                     <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Art and design, history of art</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                     <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Accounting, business and economics</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                     <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Biology</th>
                     <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
                   <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header">Astronomy</th>
+                    <th scope="row" class="govuk-table__header">Chemistry</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Citizenship studies</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Computer science</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Dance, drama and theatre</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Design, technology and engineering</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Electronics</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>\
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">English</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Environmental science</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Film and media studies</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Food preparation and nutrition</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Geography</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Geology</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">History
+                    </th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Mathematics
+                    </th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Modern foreign languages</th>
                     <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
