--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -204,6 +204,68 @@
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Music</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Physical education</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Philosophy
+                    </th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Physics</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Politics</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Psychology
+                    </th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Religious studies
+                    </th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Sociology
+                    </th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                 
                 </tbody>
               </table>
             </div>
