--- a/app/views/prototypes/peter/vacancies-levels.html
+++ b/app/views/prototypes/peter/vacancies-levels.html
@@ -54,65 +54,80 @@
                 <!--<div id="waste-hint" class="govuk-hint">
                   Select all that apply.
                 </div>-->
-                <div class="govuk-checkboxes">
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste">
-                      Entry level
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-                      Level 1
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 2
-                    </label>
-                  </div>
-
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 3
-                    </label>
-                  </div>
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 4
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 5
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 6
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 7
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 8
-                    </label>
-                  </div>
-                </div>
+                <table class="govuk-table">
+                
+                  <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                      <th scope="col" class="govuk-table__header"></th>
+                      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                    </tr>
+                  </thead>
+                  <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Entry level</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 1</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 2</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 3</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 4</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 5</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 6</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 7</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 8</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                  
+                  </tbody>
+                </table>
             
               </fieldset>
             </div><br><br>
@@ -129,65 +144,80 @@
                 <!--<div id="waste-hint" class="govuk-hint">
                   Select all that apply.
                 </div>-->
-                <div class="govuk-checkboxes">
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste">
-                      Entry level
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-                      Level 1
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 2
-                    </label>
-                  </div>
-
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 3
-                    </label>
-                  </div>
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 4
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 5
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 6
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 7
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-                    <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-                      Level 8
-                    </label>
-                  </div>
-                </div>
+                <table class="govuk-table">
+                
+                  <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                      <th scope="col" class="govuk-table__header"></th>
+                      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                    </tr>
+                  </thead>
+                  <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Entry level</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 1</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 2</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 3</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 4</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 5</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 6</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 7</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                    <tr class="govuk-table__row">
+                      <th scope="row" class="govuk-table__header">Level 8</th>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                        <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                    </tr>
+  
+                  
+                  </tbody>
+                </table>
             
               </fieldset>
             </div>
