--- a/app/views/prototypes/peter/filled2.html
+++ b/app/views/prototypes/peter/filled2.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How long did it take to find teachers for these subjects?
+                Were the vacancies filled?
               </h1>
             </legend>
             <!--<div id="citizenship-conditional-hint" class="govuk-hint">
@@ -55,27 +55,22 @@
                         <div class="govuk-radios__item">
                           <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
                           <label class="govuk-label govuk-radios__label" for="teachers">
-                            Less than one month
+                            Yes - filled permanently or as advertised
                           </label>
                         </div>
                         <div class="govuk-radios__item">
                           <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
                           <label class="govuk-label govuk-radios__label" for="teachers-2">
-                            2 to 3 months
+                            Yes - filled temporarily
                           </label>
                         </div>
                         <div class="govuk-radios__item">
                           <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
                           <label class="govuk-label govuk-radios__label" for="teachers-3">
-                            4 to 5 months
+                            No
                           </label>
                         </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers-4" name="teachers" type="radio" value="over">
-                          <label class="govuk-label govuk-radios__label" for="teachers-4">
-                            Over 6 months
-                          </label>
-                        </div>
+                       
                       </div>
                   
                     </fieldset>
@@ -93,27 +88,22 @@
                         <div class="govuk-radios__item">
                           <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
                           <label class="govuk-label govuk-radios__label" for="teachers">
-                            Less than one month
+                            Yes - filled permanently or as advertised
                           </label>
                         </div>
                         <div class="govuk-radios__item">
                           <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
                           <label class="govuk-label govuk-radios__label" for="teachers-2">
-                            2 to 3 months
+                            Yes - filled temporarily
                           </label>
                         </div>
                         <div class="govuk-radios__item">
                           <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
                           <label class="govuk-label govuk-radios__label" for="teachers-3">
-                            4 to 5 months
+                            No
                           </label>
                         </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers-4" name="teachers" type="radio" value="over">
-                          <label class="govuk-label govuk-radios__label" for="teachers-4">
-                            Over 6 months
-                          </label>
-                        </div>
+                       
                       </div>
                   
                     </fieldset>
@@ -127,27 +117,22 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
                 <label class="govuk-label govuk-radios__label" for="teachers">
-                  Less than one month
+                  Yes - filled permanently or as advertised
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
                 <label class="govuk-label govuk-radios__label" for="teachers-2">
-                  2 to 3 months
+                  Yes - filled temporarily
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
                 <label class="govuk-label govuk-radios__label" for="teachers-3">
-                  4 to 5 months
+                  No
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="teachers-4" name="teachers" type="radio" value="over">
-                <label class="govuk-label govuk-radios__label" for="teachers-4">
-                  Over 6 months
-                </label>
-              </div>
+             
             </div>
           
             </div>
@@ -160,7 +145,7 @@
   
   
 
-          <a href="filled2" class="govuk-button show-continue" style="display: inline;">
+          <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
