--- a/app/views/prototypes/peter/answers-provider.html
+++ b/app/views/prototypes/peter/answers-provider.html
@@ -46,6 +46,20 @@
               Managers
             </dt>
             <dd class="govuk-summary-list__value">
+              2
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Managers filled
+            </dt>
+            <dd class="govuk-summary-list__value">
               1
             </dd>
             <dd class="govuk-summary-list__actions">
@@ -60,21 +74,7 @@
               Teachers
             </dt>
             <dd class="govuk-summary-list__value">
-              12
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Teaching support
-            </dt>
-            <dd class="govuk-summary-list__value">
-              2
+              10
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
